--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome Books</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header class="header-class">
@@ -71,6 +71,6 @@
     <footer class="footer">
       <p>Copyright 2022 F. Lima and K. Getie © All rights reserved</p>
     </footer>
-    <script src="./script/script.js"></script>
+    <script type="module" src="./modules/index.js"></script>
   </body>
 </html>
