--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     <footer class="footer">
       <p>Copyright 2022 F. Lima and K. Getie © All rights reserved</p>
     </footer>
-    <script type="module" src="./modules/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
